--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SWCI Interactive Simulation — Investor Demo</title>
-  <meta name="description" content="Interactive, standalone simulation of the Sustainability-Weighted Crypto Index (SWCI) with formula explainers, adjustable weights, built-in tests, and polished visuals for investor demos." />
+  <meta name="description" content="Interactive, standalone simulation of the Sustainability-Weighted Crypto Index (SWCI) with formula explainers, adjustable weights, built-in tests, and interactive visuals for product demos." />
   <style>
     :root{
       --bg:#000;
